# ACIsstant

./: .gitignore  LOGGING-DEBUG.md  README.md  TO-DO  download_model.py  install_arch.sh  install_linux.sh  install_windows.bat  pyproject.toml  requirements.txt  run.bat  run.sh
ACIsstant/: README.md  run.sh
ACIsstant/backend/: database.py  llm.py  main.py
ACIsstant/frontend/: app.js  index.html  style.css
backend/: config.py  database.py  llm.py  main.py  rag.py
data/: chats.db
data/uploads/: README.md
fine-tuning/: README.md
frontend/: app.js  app2.js  index.html  style.css  test_katex.html  test_kroki.html  test_tikz.html
